--- a/blog.html
+++ b/blog.html
@@ -463,11 +463,71 @@
 
 		<nav class="blog-nav" aria-label="Blog post list">
 			<ul>
+				<li><a href="#lds-post-3">Speaker Testimonial Series: Natalia Grant - How UX Research
+						Naturally Evolved Into Creating Access to Justice</a></li>
 				<li><a href="#lds-post-2">From Proposals to Program – Creating the LDS 2025 by Humzah Khan</a></li>
 				<li><a href="#lds-post-1">The Legal Design Summit: What we stand for by Sade Mäntylä</a></li>
 			</ul>
 		</nav>
+		<article id="lds-post-3">
 
+			<h2>LDS Blog #3: Speaker Testimonial Series: Natalia Grant - How UX Research Naturally Evolved Into Creating
+				Access to Justice</h2>
+			<footer class="author">
+				<img src="images/gallery/the-gallery-pink.png" alt="Portrait of Ayşenur Kölgesiz" />
+				<p>
+					The introduction to this blog post was written by <strong>Ayşenur Kölgesiz</strong>, part of the
+					Legal Design Summit 2025 and Communication and Social Media Team
+				</p>
+			</footer>
+			<br>
+			<p>
+				We asked Natalia Grant to share her Legal Design story, and her responses revealed incredible journeys
+				of discovery and purpose! In this ongoing series featuring Legal Design Summit 2025 Speaker
+				Testimonials, we're thrilled to spotlight professionals who are reshaping how we think about law,
+				design, and human experience.
+				Meet Natalia Grant, who is a Senior UX Researcher at Jaramillo Villamizar and an innovator who's spent
+				over 20 years making complex experiences beautifully simple. Her journey from journalism to UX research
+				led her to Legal Design: a perfect reconnection with her career roots in journalism and information
+				architecture! Now she's transforming complex legal experiences into clear, user-centered solutions. With
+				her MA in Applied Imagination, she's bridging cultures and making justice accessible. Her upcoming LDS
+				presentation reveals how to unlock clarity by understanding user context beyond text and tech.
+				Through three key questions, we explored our Legal Design Summit 2025 speakers' journeys, and their
+				responses are truly inspiring! You’ll find Natalia’s thoughts below.
+
+			</p>
+
+
+			<h3>Tell us your legal design story - what brought you here?</h3>
+			<p>
+				“Last year, after two decades in UX, I was searching for deeper meaning in my career when I was
+				contacted by Jaramillo Villamizar, a legal firm that was expanding its Legal Design practice. Thanks to
+				them, I realized that as a UX Researcher, I was already involved in this field by observing people
+				interacting with legal systems in multiple cultures, and that my role was sort of promoting change and
+				justice for them. Finding Legal Design was reconnecting with my career roots: journalism and information
+				architecture.”
+			</p>
+			<h3>What are you most looking forward to about the LDS?</h3>
+			<p>
+				“I’m passionate about communities, and I look forward to connecting with people and their stories, and
+				secondly, to learning more about what is happening in the Legal Design World and how to add value as a
+				professional and as a company. As a researcher, I’m curious about how lawyers work across different
+				cultures and what similarities or differences there are compared to the USA and Latin America, so I will
+				be observing and listening.”
+
+			</p>
+
+			<h3>What key message do you hope to convey? (a teaser on your presentation)</h3>
+			<p>
+				“In my talk, I expect to create awareness about the importance of understanding the user's context for
+				designing better Legal Experiences. I’ll provide tips and tricks to run observational research, based on
+				two cases: the closing ceremony of buying a house in Massachusetts and the reading analysis from a
+				package insert of a pharmaceutical ecosystem. I think the best way to unlock clarity is by observing
+				what could be “blurring” the user's understanding beyond the text or technology itself.”
+			</p>
+
+		</article>
+		<br>
 		<article id="lds-post-2">
 
 			<h2>LDS Blog #2: From Proposals to Program - Creating the Legal Design Summit 2025</h2>
