blog post update

--- a/blog.html
+++ b/blog.html
@@ -474,11 +474,11 @@
 			<h2>LDS Blog #3: Speaker Testimonial Series: Natalia Grant - How UX Research Naturally Evolved Into Creating
 				Access to Justice</h2>
 			<footer class="author">
-				<img src="images/gallery/the-gallery-pink.png" alt="Portrait of Ayşenur Kölgesiz" />
+				<img src="images/speakers/2025/NataliaGrant_crop.jpeg" alt="Natalia Grant" />
 				<p>
-					The introduction to this blog post was written by <strong>Ayşenur Kölgesiz</strong>, part of the
-					Legal Design Summit 2025 and Communication and Social Media Team
-				</p>
+					Natalia is speaking at the 2025 Summit on Day 2! Read more about Natalia <a
+						href="speakers.html#natalia-grant">
+						here</a>
 			</footer>
 			<br>
 			<p>
@@ -525,6 +525,13 @@
 				package insert of a pharmaceutical ecosystem. I think the best way to unlock clarity is by observing
 				what could be “blurring” the user's understanding beyond the text or technology itself.”
 			</p>
+			<footer class="author">
+
+				<p>
+					The introduction to this blog post was written by <strong>Ayşenur Kölgesiz</strong>, part of the
+					Legal Design Summit 2025 and Communication and Social Media Team
+				</p>
+			</footer>
 
 		</article>
 		<br>
