--- a/the-gallery.html
+++ b/the-gallery.html
@@ -555,8 +555,10 @@
         <header class="header">
             <h1 class="main-title">[Beta] The Gallery</h1>
             <p class="subtitle">An Exhibition of Legal Design in Action</p>
-            <p class="subtitle">A space to explore and celebrate legal design work from around the world featuring <em>case
-                studies</em> and <em>practical examples</em> contributed by practicipants and partners</p>
+            <p class="subtitle">A space to explore and celebrate legal design work from around the world featuring
+                <em>case
+                    studies</em> and <em>practical examples</em> contributed by practicipants and partners
+            </p>
         </header>
         <div class="gallery-wrapper">
             <aside class="gallery-sidebar" aria-labelledby="sidebar-heading">
@@ -598,7 +600,7 @@
                                     <span class="badge">#Accessibility</span>
                                     <span class="badge badge-year">2025</span>
                                 </div>
-                                  <div class="exhibition-actions">
+                                <div class="exhibition-actions">
                                     <a href="https://www.linkedin.com/in/aneta-baranowska-out-law/"
                                         class="social-icon linkedin-icon" aria-label="LinkedIn"></a>
 
@@ -619,7 +621,7 @@
                                     <h3 class="person-name">
                                         <img src="images/flags/vn.svg" alt="" height="18"> Aneta Baranowska
                                     </h3>
-                                
+
 
                                     <p class="person-links">
                                         <a href="https://www.linkedin.com/in/aneta-baranowska-out-law/"
@@ -1256,7 +1258,7 @@
                                             Justice Innovation Lab Approach</span></h2>
 
                                     <h3 class="person-name">
-                                        <img src="images/flags/vn.svg" alt="" height="18"> Zainab Malik 
+                                        <img src="images/flags/vn.svg" alt="" height="18"> Zainab Malik
                                     </h3>
                                     <p class="person-meta">HiiL: Dedicated to People-centred Justice</p>
 
