--- a/speakers.html
+++ b/speakers.html
@@ -914,7 +914,7 @@
         position: "Sr. UX Researcher",
 
         image: "images/speakers/2025/NataliaGrant_crop.jpeg",
-        linkedin: "#",
+        linkedin: "https://www.linkedin.com/in/nataliavgrant/",
         bio: "Legal Design enthusiast with over 20 years in UX, Natalia pioneered usability studies in Colombia and served as Practitioners Vice-Chair for SIGCHI Latam. Formerly founder and co-director of Usaria, she led global research projects across varied contexts and technologies. Her work spans startups to Fortune 500s, optimizing digital content, AI tools, wearables, and physical products, always with a user-centered focus. She holds an MA in Applied Imagination from the University of the Arts London and specializes in human-centered innovation. Currently, she evolves Legal Design at Jaramillo Villamizar making complex experiences clearer while honoring legal rigor.",
         sessions: [
           { day: "DAY 2 - Friday", title: "Unlocking Clarity: UX Research Insights from Real Legal Experiences" }
