blog post update with author pic

--- a/blog.html
+++ b/blog.html
@@ -526,7 +526,7 @@
 				what could be “blurring” the user's understanding beyond the text or technology itself.”
 			</p>
 			<footer class="author">
-
+				<img src="images/team/team-2025/Aysenur.png" alt="Portrait of Ayşenur Kölgesiz" />
 				<p>
 					The introduction to this blog post was written by <strong>Ayşenur Kölgesiz</strong>, part of the
 					Legal Design Summit 2025 and Communication and Social Media Team
