--- a/speakers.html
+++ b/speakers.html
@@ -957,6 +957,31 @@
         ]
       },
       {
+        section: "Designing Access to Justice",
+        name: "Jeremie Quiohilag",
+        position: "Principal Project Manager, NSW Department of Communities and Justice",
+
+        image: "images/speakers/2025/Jeremie Quiohilag.jpg",
+        linkedin: "https://www.linkedin.com/in/jeremie-quiohilag-004356234/",
+        bio: "Jeremie is a Principal Project Manager with the NSW Department of Communities and Justice in Australia. A lawyer with 25 years’ experience working in social justice, she has dedicated her career to improving access to justice for people excluded by the legal system. During her years as a practising lawyer, Jeremie founded a number of local and state-wide specialist legal services and now leads groundbreaking work at the intersection of law, design, and technology. Jeremie is currently spearheading the development of an Australia-first digital service that helps domestic and family violence victim-survivors stay safe - using trauma-informed, victim-centred design to deliver real-world impact where it matters most.",
+
+        sessions: [
+          { day: "DAY 2 - Friday", title: "Fireside chat: Designing with, not for: Revisioning Justice as Trauma-Informed and Person-Centered" }
+        ]
+      },
+      {
+        section: "Designing Access to Justice",
+        name: "Scott Young",
+        position: "Service Designer | Australia",
+
+        image: "images/speakers/2025/Scott Young.jpeg",
+        linkedin: "https://www.linkedin.com/in/scottyoungau/",
+        bio: "Scott is a multidisciplinary service designer with over a decade of experience working across government, science, environment, and now justice. He brings a strong foundation in human-centred design and systems thinking to tackle complex public challenges - especially those that affect people at their most vulnerable. Currently leading design on initiatives within Australia's justice system, Scott works at the intersection of trauma-informed practice, technology, and policy reform. He believes that when we deeply understand the lived experiences of people and design from multiple perspectives, we improve systems and restore trust. Scott’s practice blends creative problem-solving, theoretical rigour, and a commitment to impact. His focus is always on making the world better, one double diamond at a time.",
+        sessions: [
+          { day: "DAY 2 - Friday", title: "Fireside chat: Designing with, not for: Revisioning Justice as Trauma-Informed and Person-Centered" }
+        ]
+      },
+      {
         section: "Challenging Tradition through Innovation",
         name: "Barbora Obracajova",
         position: "Lawyer, Attorney-at-Code",
