--- a/program.html
+++ b/program.html
@@ -1143,7 +1143,8 @@
                 <div class="session-title">Designing with, not for: Revisioning Justice as Trauma-Informed and
                   Person-Centered
                 </div>
-                <div class="session-speaker"><strong>Coming soon...</strong>
+                <div class="session-speaker"><strong>Aaron Leakey, Emily Oliver, Jeremie Quiohilag & Scott
+                    Young</strong>
                 </div>
               </div>
             </div>
