--- a/the-gallery.html
+++ b/the-gallery.html
@@ -720,9 +720,9 @@
                                     <p><a
                                             href="https://drive.google.com/drive/u/1/folders/1MStf4zmhxPqQq5KCRci4EG3gKBi5r6DJ">Download
                                             the material here</a></p>
-                                    <p><a href="www.out-law.pl">Read
+                                    <p><a href="https://www.out-law.pl">Read
                                             the blog</a></p>
-                                    <p><a href="www.legalnydesign.pl">Project Site</a></p>
+                                    <p><a href="https://www.legalnydesign.pl">Project Site</a></p>
                                     <p><a href="https://www.linkedin.com/company/legalny-design/?viewAsMember=true  ">Project
                                             LinkedIn</a></p>
                                 </div>
