changed scotts image

--- a/speakers.html
+++ b/speakers.html
@@ -974,7 +974,7 @@
         name: "Scott Young",
         position: "Service Designer | Australia",
 
-        image: "images/speakers/2025/Scott Young.jpeg",
+        image: "images/speakers/2025/Scott Young 1 500-500.png",
         linkedin: "https://www.linkedin.com/in/scottyoungau/",
         bio: "Scott is a multidisciplinary service designer with over a decade of experience working across government, science, environment, and now justice. He brings a strong foundation in human-centred design and systems thinking to tackle complex public challenges - especially those that affect people at their most vulnerable. Currently leading design on initiatives within Australia's justice system, Scott works at the intersection of trauma-informed practice, technology, and policy reform. He believes that when we deeply understand the lived experiences of people and design from multiple perspectives, we improve systems and restore trust. Scott’s practice blends creative problem-solving, theoretical rigour, and a commitment to impact. His focus is always on making the world better, one double diamond at a time.",
         sessions: [
