update program times to reflect accuratley

--- a/brainfactory.html
+++ b/brainfactory.html
@@ -741,7 +741,7 @@
                   </p>
                   <p><strong>Facilitators:</strong></p>
                   <ul>
-                    <li>Riyal Patel & team, DLA Piper</li>
+                    <li>Riyal Patel, Francesca Oprandi, Deborah Paracchini and Enila Elezi, DLA Piper</li>
                     <li>Maged Helmy, Newcode.ai</li>
 
                   </ul>
