--- a/program.html
+++ b/program.html
@@ -1028,223 +1028,231 @@
             </div>
           </div>
         </div>
-
-        <div class="party-section">
-          <div class="party-header">
-            Unwind and Connect at the Afterparty 🎉
-          </div>
-          <div class="party-content">
-            <span class="party-emoji">🥳🍾🎵</span>
-            <div>As our program concludes for the day, it is the time for the Afterparty!
-              This is the perfect opportunity
-              to relax, connect with fellow attendees, and extend valuable discussions in a more informal and vibrant
-              setting. Keep an eye out for upcoming details and separate registration for this special evening! </div>
-
-            <span class="party-emoji">🌟✨🎊</span>
-          </div>
-        </div>
-
-        <div class="agenda-section">
-          <div class="day-header">
-            <i class="fas fa-leaf"></i> DAY 2 | Friday | Advancing Environmental and Social Goals
-          </div>
-
-          <div class="session-row">
-            <div class="session-header" onclick="toggleSession(this)">
-              <div class="time-slot">09:00</div>
-              <div class="session-content">
-                <div class="session-title">Doors Open</div>
-              </div>
-            </div>
-          </div>
-          <div class="session-row">
-            <div class="session-header" onclick="toggleSession(this)">
-              <div class="time-slot">09:30</div>
-              <div class="session-content">
-                <div class="session-title">Welcome to Day 2!</div>
-              </div>
-            </div>
-          </div>
-          <div class="session-divider">
-            🌱 Designing Sustainable Societies
-          </div>
-          <div class="session-row keynote-session">
-            <div class="session-header" onclick="toggleSession(this)">
-              <div class="time-slot">09:35–9:55</div>
-              <div class="session-content">
-                <div class="session-title">Opening keynote:
-                  Dear Business: You Can’t Spell Sustainability Without Human Rights and Legal Design
-                </div>
-                <div class="session-speaker"><strong>Ebru Metin</strong></div>
-              </div>
-            </div>
-          </div>
-          <div class="session-row">
-            <div class="session-header" onclick="toggleSession(this)">
-              <div class="time-slot">10:00–10:20</div>
-              <div class="session-content">
-                <div class="session-title">Can Contracts Save the World?
-                </div>
-                <div class="session-speaker"><strong>Anne Ketola & Anna Hurmerinta-Haanpää</strong></div>
-              </div>
-            </div>
-          </div>
-
-          <div class="session-row">
-            <div class="session-header" onclick="toggleSession(this)">
-              <div class="time-slot">10:25–10:45</div>
-              <div class="session-content">
-                <div class="session-title">What if Birds Could Tell Us What is Right? A Curious Visit to the World
-                  of Designing with the More-than-human
-                </div>
-                <div class="session-speaker"><strong>Nina Toivonen</strong></div>
-              </div>
-            </div>
-          </div>
-
-          <div class="session-divider">
-            ⚖️ Designing Access to Justice
-          </div>
-
-          <div class="session-row">
-            <div class="session-header" onclick="toggleSession(this)">
-              <div class="time-slot">10:50–11:10</div>
-              <div class="session-content">
-                <div class="session-title">Artificial Intelligence for Open Justice: Conscious, Community-driven
-                  Solutions
-                </div>
-                <div class="session-speaker"><strong>Laura Márquez Martínez</strong></div>
-              </div>
-            </div>
-          </div>
-
-          <div class="session-row">
-            <div class="session-header" onclick="toggleSession(this)">
-              <div class="time-slot">11:15–11:35</div>
-
-              <div class="session-content">
-                <div class="session-title">Beyond Brochures : Legal Design as a Powerful Driver for Systemic
-                  Justice Reform in Tunisia
-                </div>
-                <div class="session-speaker"><strong>Dorra Harrar</strong></div>
-              </div>
-            </div>
-          </div>
-
-          <div class="lunch-divider session-divider">
-            11:35–13:00 Creativity and innovation requires carbs – it’s lunch time!
-            Lunch is not provided at the venue and is self-paid
-          </div>
-
-          <div class="session-row">
-            <div class="session-header" onclick="toggleSession(this)">
-              <div class="time-slot">13:05–13:35</div>
-              <div class="session-content">
-                <div class="session-title">Designing with, not for: Revisioning Justice as Trauma-Informed and
-                  Person-Centered
-                </div>
-                <div class="session-speaker"><strong>Aaron Leakey, Emily Oliver, Jeremie Quiohilag & Scott
-                    Young</strong>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="session-row">
-            <div class="session-header" onclick="toggleSession(this)">
-              <div class="time-slot">13:35–14:00</div>
-
-              <div class="session-content">
-                <div class="session-title">Unlocking Clarity: UX Research Insights from Real Legal Experiences
-                </div>
-                <div class="session-speaker"><strong>Natalia Grant</strong>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="session-row">
-            <div class="session-header" onclick="toggleSession(this)">
-              <div class="time-slot">14:00–14:20</div>
-
-              <div class="session-content">
-                <div class="session-title">Legal Service Design: A Tool for Rethinking Reproduction
-                </div>
-                <div class="session-speaker"><strong>Angelica Flechas</strong>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="break-divider session-divider">
-            14:20–15:15 – Coffee break: Refill your cup and make new connections
-          </div>
-
-          <div class="session-divider">
-            🚀 Challenging Tradition through Innovation
-          </div>
-
-          <div class="session-row">
-            <div class="session-header" onclick="toggleSession(this)">
-              <div class="time-slot">15:20–15:50</div>
-              <div class="session-content">
-                <div class="session-title">Fireside chat:
-                  From Primary School to University: How Legal Design can Redesign Legal Literacy and
-                  Education
-                </div>
-                <div class="session-speaker"><strong>Barbora Obracajova, Michael Doherty, Ruy Coppola Jr,
-                    Tiago Guerreiro </strong>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="session-row">
-            <div class="session-header" onclick="toggleSession(this)">
-              <div class="time-slot">15:55–16:15</div>
-              <div class="session-content">
-                <div class="session-title">Mission Impossible: Designing the Mindset of Public Officials
-                </div>
-                <div class="session-speaker"><strong>Peegi Kaibald & Outi Nokkonen</strong>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="session-row keynote-session">
-            <div class="session-header" onclick="toggleSession(this)">
-              <div class="time-slot">16:20–16:40</div>
-              <div class="session-content">
-                <div class="session-title">Closing keynote: Shaping the Future of Law – 5 Myths We Must
-                  Leave Behind
-                </div>
-                <div class="session-speaker"><strong>Astrid Kohlmeier & Lina Keßler</strong>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="session-row">
-            <div class="session-header" onclick="toggleSession(this)">
-              <div class="time-slot">16:45</div>
-              <div class="session-content">
-                <div class="session-title">Final reflections
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="party-section">
-            <div class="party-header">
-              🎊 Summit Closing – Let's Celebrate 🎊
-            </div>
-            <div class="party-content">
-              <span class="party-emoji">🌟✨🎊</span>
-
-              <div><strong>Thank you for an amazing Legal Design Summit 2025! </strong></div>
-              <div style="margin-top: 15px; font-size: 16px;">Details coming soon! 🚀</div>
-              <span class="party-emoji">🌟✨🎊</span>
+        <div class="session-header" onclick="toggleSession(this)">
+          <div class="time-slot">17:00-17:10</div>
+          <div class="session-content">
+            <div class="session-title">Closing remarks
             </div>
           </div>
         </div>
     </div>
+
+    <div class="party-section">
+      <div class="party-header">
+        Unwind and Connect at the Afterparty 🎉
+      </div>
+      <div class="party-content">
+        <span class="party-emoji">🥳🍾🎵</span>
+        <div>As our program concludes for the day, it is the time for the Afterparty!
+          This is the perfect opportunity
+          to relax, connect with fellow attendees, and extend valuable discussions in a more informal and vibrant
+          setting. Keep an eye out for upcoming details and separate registration for this special evening! </div>
+
+        <span class="party-emoji">🌟✨🎊</span>
+      </div>
+    </div>
+
+    <div class="agenda-section">
+      <div class="day-header">
+        <i class="fas fa-leaf"></i> DAY 2 | Friday | Advancing Environmental and Social Goals
+      </div>
+
+      <div class="session-row">
+        <div class="session-header" onclick="toggleSession(this)">
+          <div class="time-slot">09:00</div>
+          <div class="session-content">
+            <div class="session-title">Doors Open</div>
+          </div>
+        </div>
+      </div>
+      <div class="session-row">
+        <div class="session-header" onclick="toggleSession(this)">
+          <div class="time-slot">09:30</div>
+          <div class="session-content">
+            <div class="session-title">Welcome to Day 2!</div>
+          </div>
+        </div>
+      </div>
+      <div class="session-divider">
+        🌱 Designing Sustainable Societies
+      </div>
+      <div class="session-row keynote-session">
+        <div class="session-header" onclick="toggleSession(this)">
+          <div class="time-slot">09:35–9:55</div>
+          <div class="session-content">
+            <div class="session-title">Opening keynote:
+              Dear Business: You Can’t Spell Sustainability Without Human Rights and Legal Design
+            </div>
+            <div class="session-speaker"><strong>Ebru Metin</strong></div>
+          </div>
+        </div>
+      </div>
+      <div class="session-row">
+        <div class="session-header" onclick="toggleSession(this)">
+          <div class="time-slot">10:00–10:20</div>
+          <div class="session-content">
+            <div class="session-title">Can Contracts Save the World?
+            </div>
+            <div class="session-speaker"><strong>Anne Ketola & Anna Hurmerinta-Haanpää</strong></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="session-row">
+        <div class="session-header" onclick="toggleSession(this)">
+          <div class="time-slot">10:25–10:45</div>
+          <div class="session-content">
+            <div class="session-title">What if Birds Could Tell Us What is Right? A Curious Visit to the World
+              of Designing with the More-than-human
+            </div>
+            <div class="session-speaker"><strong>Nina Toivonen</strong></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="session-divider">
+        ⚖️ Designing Access to Justice
+      </div>
+
+      <div class="session-row">
+        <div class="session-header" onclick="toggleSession(this)">
+          <div class="time-slot">10:50–11:10</div>
+          <div class="session-content">
+            <div class="session-title">Artificial Intelligence for Open Justice: Conscious, Community-driven
+              Solutions
+            </div>
+            <div class="session-speaker"><strong>Laura Márquez Martínez</strong></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="session-row">
+        <div class="session-header" onclick="toggleSession(this)">
+          <div class="time-slot">11:15–11:35</div>
+
+          <div class="session-content">
+            <div class="session-title">Beyond Brochures : Legal Design as a Powerful Driver for Systemic
+              Justice Reform in Tunisia
+            </div>
+            <div class="session-speaker"><strong>Dorra Harrar</strong></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="lunch-divider session-divider">
+        11:40–13:00 Creativity and innovation requires carbs – it’s lunch time!
+        Lunch is not provided at the venue and is self-paid
+      </div>
+
+      <div class="session-row">
+        <div class="session-header" onclick="toggleSession(this)">
+          <div class="time-slot">13:05–13:35</div>
+          <div class="session-content">
+            <div class="session-title">Designing with, not for: Revisioning Justice as Trauma-Informed and
+              Person-Centered
+            </div>
+            <div class="session-speaker"><strong>Aaron Leakey, Emily Oliver, Jeremie Quiohilag & Scott
+                Young</strong>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="session-row">
+        <div class="session-header" onclick="toggleSession(this)">
+          <div class="time-slot">13:40–14:00</div>
+
+          <div class="session-content">
+            <div class="session-title">Unlocking Clarity: UX Research Insights from Real Legal Experiences
+            </div>
+            <div class="session-speaker"><strong>Natalia Grant</strong>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="session-row">
+        <div class="session-header" onclick="toggleSession(this)">
+          <div class="time-slot">14:05–14:25</div>
+
+          <div class="session-content">
+            <div class="session-title">Legal Service Design: A Tool for Rethinking Reproduction
+            </div>
+            <div class="session-speaker"><strong>Angelica Flechas</strong>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="break-divider session-divider">
+        14:25–15:15 – Coffee break: Refill your cup and make new connections
+      </div>
+
+      <div class="session-divider">
+        🚀 Challenging Tradition through Innovation
+      </div>
+
+      <div class="session-row">
+        <div class="session-header" onclick="toggleSession(this)">
+          <div class="time-slot">15:20–15:50</div>
+          <div class="session-content">
+            <div class="session-title">Fireside chat:
+              From Primary School to University: How Legal Design can Redesign Legal Literacy and
+              Education
+            </div>
+            <div class="session-speaker"><strong>Barbora Obracajova, Michael Doherty, Ruy Coppola Jr,
+                Tiago Guerreiro </strong>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="session-row">
+        <div class="session-header" onclick="toggleSession(this)">
+          <div class="time-slot">15:55–16:15</div>
+          <div class="session-content">
+            <div class="session-title">Mission Impossible: Designing the Mindset of Public Officials
+            </div>
+            <div class="session-speaker"><strong>Peegi Kaibald & Outi Nokkonen</strong>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="session-row keynote-session">
+        <div class="session-header" onclick="toggleSession(this)">
+          <div class="time-slot">16:20–16:40</div>
+          <div class="session-content">
+            <div class="session-title">Closing keynote: Shaping the Future of Law – 5 Myths We Must
+              Leave Behind
+            </div>
+            <div class="session-speaker"><strong>Astrid Kohlmeier & Lina Keßler</strong>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="session-row">
+        <div class="session-header" onclick="toggleSession(this)">
+          <div class="time-slot">16:45 - 17:00</div>
+          <div class="session-content">
+            <div class="session-title">Final reflections
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="party-section">
+        <div class="party-header">
+          🎊 Summit Closing – Let's Celebrate 🎊
+        </div>
+        <div class="party-content">
+          <span class="party-emoji">🌟✨🎊</span>
+
+          <div><strong>Thank you for an amazing Legal Design Summit 2025! </strong></div>
+          <div style="margin-top: 15px; font-size: 16px;">Details coming soon! 🚀</div>
+          <span class="party-emoji">🌟✨🎊</span>
+        </div>
+      </div>
+    </div>
+  </div>
 
   </div>
 
