missing partner logo

--- a/footer.html
+++ b/footer.html
@@ -241,6 +241,8 @@
                   <a href="https://legaldesignsummit.com" target="_blank">
                         <img loading="lazy" src="images/collabs/Legal-D(DorraHarrar)UPDATED.png" alt="Dorra Harrar"
                               class="large-logo" />
+                        <a href="#" target=" _blank"><img loading="lazy"
+                                    src="images/collabs/PLMJ_Logo_V.S1.POS.jpg"></a>
                   </a>
                   <a href="https://legaldesignsummit.com" target="_blank">
                         <img loading="lazy" src="images/collabs/RTK logo (Peegi Kaibald).png" alt="RTK"
