added uni of helsinki info

--- a/index.html
+++ b/index.html
@@ -710,7 +710,8 @@
 					<div class="blue-bar">
 					</div>
 					<h1 style="color: white;">Legal Design Summit</h1>
-					<p class="slogan-enhanced">11 - 12 September | BrainFactory 10 September @ HELSINKI, FINLAND</p>
+					<p class="slogan-enhanced">11 - 12 September | BrainFactory 10 September @ University of Helsinki
+					</p>
 					<br><br>
 					<p class="slogan-long">Welcome to the largest non-profit legal design event in the world.</p>
 				</div>
