--- a/travel.html
+++ b/travel.html
@@ -544,66 +544,27 @@
 
   <script>
 
-    fetch('regions/meta.html')
-      .then(res => res.text())
-      .then(html => {
-        const meta = document.getElementById('meta');
-        if (meta) meta.outerHTML = html;
-      });
-    fetch('regions/styles.html')
-      .then(res => res.text())
-      .then(html => {
-        const styles = document.getElementById('styles');
-        if (styles) styles.outerHTML = html;
-      });
-    fetch('regions/scripts.html')
-      .then(res => res.text())
-      .then(html => {
-        const scripts = document.getElementById('scripts');
-        if (scripts) scripts.outerHTML = html;
-      });
-    // Load menu
-    fetch('regions/menu.html')
-      .then(res => res.text())
-      .then(html => {
-        const menu = document.getElementById('menu');
-        if (menu) menu.innerHTML = html;
-      });
-    // Load content actions (tickets / contact etc.)
-    fetch('regions/content-actions.html')
-      .then(res => res.text())
-      .then(html => {
-        const actions = document.getElementById('content-actions');
-        if (actions) actions.innerHTML = html;
-      });
-    (() => {
-      const MAX_VISIBLE = 4;
+    document.addEventListener('DOMContentLoaded', () => {
       const nav = document.getElementById('ldsNav');
+      if (!nav) return;
       const moreLi = nav.querySelector('.more');
       const moreBtn = moreLi.querySelector('button');
       const subMenu = moreLi.querySelector('.submenu');
+      const MAX_VISIBLE = 4;
 
       function redistribute() {
-
         while (subMenu.firstChild) {
           nav.insertBefore(subMenu.firstChild, moreLi);
         }
         moreLi.classList.add('hidden');
-
-
         if (window.innerWidth <= 640) return;
-
-
         const available = nav.parentElement.getBoundingClientRect().width;
         let used = moreLi.offsetWidth;
         let shown = 0;
-
         [...nav.children].forEach(li => {
           if (li === moreLi) return;
-
           const fits = used + li.offsetWidth <= available;
           const underCap = shown < MAX_VISIBLE;
-
           if (fits && underCap) {
             used += li.offsetWidth;
             shown += 1;
@@ -613,6 +574,7 @@
           }
         });
       }
+
       moreBtn.addEventListener('click', () => {
         const isOpen = moreLi.classList.toggle('open');
         moreBtn.setAttribute('aria-expanded', isOpen);
@@ -620,7 +582,7 @@
 
       window.addEventListener('load', redistribute);
       window.addEventListener('resize', redistribute);
-    })();
+    });
 
   </script>
 </body>
