update travel page

--- a/travel.html
+++ b/travel.html
@@ -442,6 +442,11 @@
         Central Station is a short 7‑minute walk away.</p>
       <p><a href="https://www.google.com/maps/search/?api=1&amp;query=5+Aleksanterinkatu%2C+Helsinki" target="_blank"
           rel="noopener">View in Google Maps</a></p>
+      <figure style="margin:1rem 0; text-align: center;">
+        <img src="images/backgrounds/travel_map.png" alt="Map showing the University of Helsinki"
+          style="width:100%; max-width:600px; height:auto; border:1px solid #ccc;">
+        <figcaption style="font-size:0.85rem; color:#666;">Tourist Attractions and Summit venue</figcaption>
+      </figure>
     </section>
 
     <!-- Getting There Section -->
