--- a/blog.html
+++ b/blog.html
@@ -557,10 +557,10 @@
 									<li><a href="tickets.html">Tickets</a></li>
 									<li><a href="speakers.html">Speakers</a></li>
 									<li><a href="previous-participants.html">Who is attending?</a></li>
+									<li><a href="travel.html">Travel & Venue</a></li>
 									<li><a href="about-us.html">Meet the Team</a></li>
 									<li><a href="values.html">Values</a></li>
-									<li><a href="blog.html" aria-current="page">Blog</a></li>
-
+									<li><a href="blog.html">Blog</a></li>
 									<li><a href="the-gallery.html">[Beta] The Gallery</a></li>
 
 									<li class="more hidden">
