--- a/brainfactory.html
+++ b/brainfactory.html
@@ -525,9 +525,11 @@
                   <li><a href="tickets.html">Tickets</a></li>
                   <li><a href="speakers.html">Speakers</a></li>
                   <li><a href="previous-participants.html">Who is attending?</a></li>
+                  <li><a href="travel.html">Travel & Venue</a></li>
                   <li><a href="about-us.html">Meet the Team</a></li>
                   <li><a href="values.html">Values</a></li>
                   <li><a href="blog.html">Blog</a></li>
+                  <li><a href="the-gallery.html">[Beta] The Gallery</a></li>
 
                   <li class="more hidden">
                     <button type="button" aria-haspopup="true" aria-expanded="false">More</button>
