--- a/index.html
+++ b/index.html
@@ -673,6 +673,7 @@
 									<li><a href="tickets.html">Tickets</a></li>
 									<li><a href="speakers.html">Speakers</a></li>
 									<li><a href="previous-participants.html">Who is attending?</a></li>
+									<li><a href="travel.html">Travel & Venue</a></li>
 									<li><a href="about-us.html">Meet the Team</a></li>
 									<li><a href="values.html">Values</a></li>
 									<li><a href="blog.html">Blog</a></li>
