--- a/travel.html
+++ b/travel.html
@@ -404,8 +404,8 @@
                   <li><a href="tickets.html">Tickets</a></li>
                   <li><a href="speakers.html">Speakers</a></li>
                   <li><a href="previous-participants.html">Who is attending?</a></li>
+                  <li><a href="#">Travel & Venue</a></li>
                   <li><a href="about-us.html">Meet the Team</a></li>
-                  <li><a href="travel.html">Travel</a></li>
                   <li><a href="values.html">Values</a></li>
                   <li><a href="blog.html">Blog</a></li>
                   <li><a href="the-gallery.html">[Beta] The Gallery</a></li>
