update gallery post

--- a/the-gallery.html
+++ b/the-gallery.html
@@ -1774,8 +1774,7 @@
                             <div class="details-inner">
 
                                 <div class="details-image">
-                                    <img src="images/speakers/2025/Joaquin Santuber.jpg"
-                                        alt="Black &amp; white portrait">
+                                    <img src="images/gallery/the-gallery-image.jpg" alt="Black &amp; white portrait">
                                 </div>
 
                                 <div class="details-text">
