--- a/speakers.html
+++ b/speakers.html
@@ -738,6 +738,18 @@
       },
       {
         section: "The Power and Value of Design in Law",
+        name: "Abdul Rehman Kahn",
+        position: "Professor",
+
+        image: "images/speakers/2025/Abdul Rehman Kahn.jpg",
+        linkedin: "https://www.linkedin.com/in/abdul-rehman-khan/",
+        bio: "Abdul is a Professor at Seton Hall Law School’s Center for Social Justice, where he directs the Housing & Legal Design Clinic and founded the New Jersey Legal Design Lab—a social change laboratory where tenants, organizers, and students co-create legal tools, strategies, and governance structures to build tenant-led housing futures beyond the crisis of eviction. His work brings together movement lawyering, participatory design, and experiential learning to advance democratic civic infrastructure. He focuses on the processes by which communities define problems, set agendas, and build solutions as outcomes of collective power.",
+        sessions: [
+          { day: "DAY 1 - Thursday", title: "Fireside chat: Opening up Possibilities for Legal Design" }
+        ]
+      },
+      {
+        section: "The Power and Value of Design in Law",
         name: "Joaquín Santuber",
         position: "Research Group Lead, Metaverse Lab, LIFT_C, Johannes Kepler University Linz, Austria",
 
