--- a/program.html
+++ b/program.html
@@ -988,7 +988,7 @@
             <div class="session-content">
               <div class="session-title">Fireside chat: Opening up Possibilities for Legal Design
               </div>
-              <div class="session-speaker"><strong>Ade Mabogunje, Joaquin Santuber, Jules Sievert
+              <div class="session-speaker"><strong>Abdul Rehman Khan, Ade Mabogunje, Joaquin Santuber, Jules Sievert
                   & Siddharth de Souza
                 </strong></div>
             </div>
