--- a/brainfactory.html
+++ b/brainfactory.html
@@ -597,7 +597,7 @@
             <br><br>
           </p>
           <h3> Program</h3>
-          <p>Locations: In and around central Helsinki (walking distance from the Summit venue)</p>
+          <p>Locations: In and around central Helsinki (details below)</p>
           <p>9:00 - 13:00</p>
 
           <div class="morning-workshops-section">
@@ -647,7 +647,7 @@
                   <li> Viviana Brun, Programme Manager, Justice Innovation Labs - HiiL</li>
                   <li> Andrew Solomon, Lead Justice Collaborator - Rule of Law IDEAS Co-lab </li>
                   <li> Suparat Fern Swatemal, Global Engagement Lead, Thailand Institute of Justice</li>
-
+                  <li>Maaike de Langen, Senior Policy Advisor at the OECD</li>
                 </ul>
 
               </div>
